blt/orthanc-basic-auth-proxy-again/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-auth-proxy-again
  annotations:
    kubernetes.io/description: A reverse proxy adding HTTP basic auth to Orthanc.
spec:
  template:
    spec:
      containers:
        - name: haproxy
          image: haproxy:3.2.5-alpine
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: /readyz
          volumeMounts:
            - name: haproxy-cfg
              mountPath: /usr/local/etc/haproxy
          resources:
            limits:
              cpu: 1
              memory: 4Gi
            requests:
              cpu: 1
              memory: 4Gi
      volumes:
        - name: haproxy-cfg
          configMap:
            name: orthanc-basic-auth-proxy
