blt/orthanc-basic-auth-proxy-again/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basic-auth-proxy-again
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
